[project]
name = "silklens-api"
version = "0.1.0"
description = "SilkLens — AI-powered cultural heritage platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis[hiredis]>=5.2.0",
    "pgvector>=0.3.0",
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.10.0",
    "pyotp>=2.9",
    "webauthn>=2.0",
    "qrcode[pil]>=7.4",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "elasticsearch[async]>=8.15.0",
    "minio>=7.2.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "phonenumbers>=8.13.0",
    "babel>=2.16.0",
    "pillow>=10.4.0",
    "python-magic>=0.4.27",
    "ulid-py>=1.1.0",
    "orjson>=3.10.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-asyncpg>=0.49b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi,sqlalchemy,celery]>=2.0",
    "tenacity>=9.0.0",
    "anyio>=4.6.0",
    "slowapi>=0.1.9",
    "limits>=3.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
]
billing = [
    "stripe>=11.0",
    "paypalserversdk>=1.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-mock>=3.14.0",
    "pytest-postgresql>=6.1.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
    "polyfactory>=2.18.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
    "ipython>=8.28.0",
    "rich>=13.9.0",
    "freezegun>=1.5.0",
    "faker>=30.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "RUF", "ASYNC", "PIE", "RET", "SIM"]
ignore = ["S101", "S104", "S105"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"alembic/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "minio.*", "celery.*", "elasticsearch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Wave 5-6 agent-generated modules — strict typing to be added FAZA 6+.
# Routers use `object` for AuthContext (intentional: avoids circular imports;
# the dependency layer enforces the real type at request time).
module = [
    "src.api.routers.*",
    "src.core.observability",
    "src.core.logging",
    "src.core.metrics",
    "src.core.settings",
    "src.domain.ai.*",
    "src.domain.compliance.*",
    "src.domain.gamification.*",
    "src.domain.media.*",
    "src.domain.mfa.*",
    "src.domain.reviews.*",
    "src.domain.social.*",
    "src.infrastructure._events",
    "src.infrastructure.ai.*",
    "src.infrastructure.billing.*",
    "src.infrastructure.compliance.*",
    "src.infrastructure.gamification.*",
    "src.infrastructure.heritage.*",
    "src.infrastructure.identity.*",
    "src.infrastructure.ingestion.*",
    "src.infrastructure.media.*",
    "src.infrastructure.mfa.*",
    "src.infrastructure.notifications.*",
    "src.infrastructure.reseller.*",
    "src.infrastructure.reviews.*",
    "src.infrastructure.search.*",
    "src.infrastructure.social.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
# OTel, sentry, slowapi, webauthn, pyotp, stripe, paypal — no bundled stubs.
module = [
    "opentelemetry.*",
    "sentry_sdk.*",
    "slowapi.*",
    "limits.*",
    "webauthn.*",
    "pyotp.*",
    "stripe.*",
    "paypalserversdk.*",
    "paypalrestsdk.*",
    "magic.*",
    "respx.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests (require DB)",
    "slow: slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:celery.*",
    # Async cleanup: unclosed sockets/event-loops after asyncio test teardown
    # are a known pytest-asyncio/SQLAlchemy noise artifact, not real bugs.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__main__.py", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
